Fixed misalignment on mobile

--- a/src/components/CurrentWeather.css
+++ b/src/components/CurrentWeather.css
@@ -1,6 +1,6 @@
-.info{
+/* .info{
     left: -5%
-}
+} */
 
 .current-weather{
     margin-top: 5%;
